# blog

./: .env.example  .gitignore  404.html  README.md  dev.sh  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  flake.nix  index.html  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  sitemap.xml  tags.json
.github/workflows/: deploy.yml
about/: index.html
archive/2026/: index.html
docs/: about.md  index.md  robots.txt  tags.md
docs/.well-known/: atproto-did
docs/javascripts/: marimo-theme.js
docs/javascripts/posts/: please-do-not-touch.js
docs/posts/: 2026-06-16-hello.md  2026-06-22-fathers_day.md  2026-06-23-rowdybot.md  2026-06-30-please-do-not-touch.md  data-exploration.md  hello.md  visualization-gallery.md  welcome.md
docs/stylesheets/: extra.css  marimo-islands.css  paper-dark.css  site.css
hello-dylan/: index.html
hooks/: _islands_export.py  auto_excerpt.py  marimo_islands.py  queue_preview.py  tooltips.py  well_known.py
javascripts/: dm-underline.js  vim-navigation.js  vim-navigation.js.map
notebooks/: build_hello_og.py  build_map_data.py  build_og_card.py  build_title.py  setti.py  setti_map.json
notebooks/data/: sightings.csv
overrides/: main.html
overrides/partials/: comments.html  logo.html  post.html
please-do-not-touch/: index.html
project-setti/: index.html
rowdybot/: index.html
search/: search_index.json
src/: index.jsx
src/components/: TrailRenderer.jsx  VimNavigation.jsx
stylesheets/: marimo-islands.css  site.css
stylesheets/posts/: please-do-not-touch.css
tags/: index.html
