[project]
name = "blog"
version = "0.1.0"
description = "Just a blog"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=5.4.0",
    "cairosvg>=2.8.2",
    "duckdb>=1.4.3",
    "marimo>=0.23.9",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-blog-plugin>=0.25",
    "mkdocs-material>=9.7.1",
    "mkdocs-rss-plugin>=1.17.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymdown-extensions>=10.19.1",
    "python-markdown-math>=0.9",
]

# Publish-time only (the syndication poster, bin/syndicate.py). Kept out of the
# default deps so the site build / CI stays lean: `uv sync --group publish`.
[dependency-groups]
publish = [
    "atproto>=0.0.55",
    "mastodon-py>=1.8.1",
]
